removed unnecessary escape

--- a/neume_names_phase1.org
+++ b/neume_names_phase1.org
@@ -89,7 +89,7 @@
 |          | %     | apoh                    |               | apos+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | ^     | elh                     |               | elaf+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | &     | apelh                   |               | apel+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
-|          | \*    | hh                      |               | cham+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
+|          | *    | hh                      |               | cham+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | (     | apohh                   |               | apos+chamU+chamU2                                           |                                                               |                   |                                                                                                                                                                                     |
 |          | -     | hypo                    |               | hypo                                                        |                                                               |                   |                                                                                                                                                                                     |
 |          | +     | syne                    |               | syne                                                        |                                                               |                   |                                                                                                                                                                                     |
