--- a/neume_names_phase1.org
+++ b/neume_names_phase1.org
@@ -37,6 +37,7 @@
 |          | ∂     | haplDR                  |               | haplDR                                                      | special haple for hypporoe                                    |                   |                                                                                                                                                                                     |
 |          | ≠     | coroL                   |               | coroL                                                       |                                                               |                   |                                                                                                                                                                                     |
 |          | '     | homa                    |               | homaD                                                       |                                                               |                   |                                                                                                                                                                                     |
+|          | "     | homaD2                  |               | homaD2                                                      |                                                               |                   |                                                                                                                                                                                     |
 |          | :     | homaD2R                 |               | homaD2R                                                     |                                                               |                   |                                                                                                                                                                                     |
 |          | ;     | homaR                   |               | homaDR                                                      |                                                               |                   |                                                                                                                                                                                     |
 |          | B     | lpsef                   |               | psef                                                        | after long oligon                                             |                   |                                                                                                                                                                                     |
@@ -89,7 +90,7 @@
 |          | %     | apoh                    |               | apos+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | ^     | elh                     |               | elaf+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | &     | apelh                   |               | apel+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
-|          | *    | hh                      |               | cham+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
+|          | *     | hh                      |               | cham+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | (     | apohh                   |               | apos+chamU+chamU2                                           |                                                               |                   |                                                                                                                                                                                     |
 |          | -     | hypo                    |               | hypo                                                        |                                                               |                   |                                                                                                                                                                                     |
 |          | +     | syne                    |               | syne                                                        |                                                               |                   |                                                                                                                                                                                     |
