maybe images will show up bigger if the column text is bigger *shrug*

--- a/org/neume_names_phase1.org
+++ b/org/neume_names_phase1.org
@@ -1,4 +1,4 @@
-| Sub-Font | Char  | IMG                                            | Shorthand               | Shorthand Alt | Proper                                                      | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
+| Sub-Font | Char  | Image Preview                                  | Shorthand               | Shorthand Alt | Proper                                                      | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
 |----------+-------+------------------------------------------------+-------------------------+---------------+-------------------------------------------------------------+---------------------------------------------------------------+-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Main     | A     | [[ka_fontimages/main-capital-A.png]]               | klasD                   |               | klasD                                                       |                                                               |                   |                                                                                                                                                                                     |
 |          | a     | [[ka_fontimages/main-a.png]]                       | klasL                   |               | klasU                                                       |                                                               |                   |                                                                                                                                                                                     |
@@ -327,7 +327,7 @@
 |          | ∫     | [[ka_fontimages/chronos-integral.png]]             | gorgdotU2L              |               |                                                             |                                                               |                   |                                                                                                                                                                                     |
 |          | ≈     | [[ka_fontimages/chronos-almost-equal.png]]         | gorgdotU2               |               |                                                             |                                                               |                   |                                                                                                                                                                                     |
 |          |       |                                                |                         |               |                                                             |                                                               |                   |                                                                                                                                                                                     |
-|          |       |                                  |                         |               |                                                             |                                                               |                   |                                                                                                                                                                                     |
+|          |       |                                                |                         |               |                                                             |                                                               |                   |                                                                                                                                                                                     |
 | Archaia  | !     | [[ka_fontimages/archaia-exclamation-point.png]]    | oxeiaapo                |               | oxei+aposU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | #     | [[ka_fontimages/archaia-number-sign.png]]          | oxeiaapel               |               | oxei+apelU                                                  |                                                               |                   |                                                                                                                                                                                     |
 |          | $     | [[ka_fontimages/archaia-dollarsign.png]]           | oxeiah                  |               | oxei+chamU                                                  |                                                               |                   |                                                                                                                                                                                     |
