--- a/org/neume_names_phase1.org
+++ b/org/neume_names_phase1.org
@@ -1,4 +1,4 @@
-| Sub-Font | Char  | Image Preview                                  | Shorthand               | Shorthand Alt | Proper                                                      | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
+| Sub-Font | Char  | vvvvvvvvvvvvvvImagePreviewvvvvvvvvvvvvvv      | Shorthand               | Shorthand Alt | Proper                                                      | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
 |----------+-------+------------------------------------------------+-------------------------+---------------+-------------------------------------------------------------+---------------------------------------------------------------+-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Main     | A     | [[ka_fontimages/main-capital-A.png]]               | klasD                   |               | klasD                                                       |                                                               |                   |                                                                                                                                                                                     |
 |          | a     | [[ka_fontimages/main-a.png]]                       | klasL                   |               | klasU                                                       |                                                               |                   |                                                                                                                                                                                     |
