restore + where it should be

--- a/org/neume_names_phase1.org
+++ b/org/neume_names_phase1.org
@@ -95,7 +95,7 @@
 |          | -     | [[ka_fontimages/main-hyphen.png]]                  | hypo                            |               | hypo                            |                                                               |                   |                                                                                                                                                                                     |
 |          | _     | [[ka_fontimages/main-underscore.png]]              | syne                            |               | syne                            |                                                               |                   |                                                                                                                                                                                     |
 |          | \`    | [[ka_fontimages/main-grave.png]]                   | ken2                            |               | ken2                            |                                                               |                   |                                                                                                                                                                                     |
-|          | -     | [[ka_fontimages/main-plus.png]]                    | stav                            |               | stav                            |                                                               |                   |                                                                                                                                                                                     |
+|          | +     | [[ka_fontimages/main-plus.png]]                    | stav                            |               | stav                            |                                                               |                   |                                                                                                                                                                                     |
 |          | =     | [[ka_fontimages/main-equal-sign.png]]              | brea                            |               | brea                            |                                                               |                   |                                                                                                                                                                                     |
 |          | <     | [[ka_fontimages/main-left-caret.png]]              | vare-dipl                       |               | vare-dipl                       |                                                               |                   |                                                                                                                                                                                     |
 |          | ,     | [[ka_fontimages/main-comma.png]]                   | vare-hapl                       |               | vare-hapl                       |                                                               |                   |                                                                                                                                                                                     |
@@ -186,7 +186,7 @@
 |          | %     | [[ka_fontimages/fthora-percent-sign.png]]          | indicatekeR                     |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | &     | [[ka_fontimages/fthora-ampersand.png]]             | indicateniR                     |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | '     | [[ka_fontimages/fthora-single-quote.png]]          | sharp2                          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
-|          | -     | [[ka_fontimages/fthora-plus.png]]                  | sharpR                          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
+|          | +     | [[ka_fontimages/fthora-plus.png]]                  | sharpR                          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | ,     | [[ka_fontimages/fthora-comma.png]]                 | permflat                        |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | -     | [[ka_fontimages/fthora-hyphen.png]]                | flat                            |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | .     | [[ka_fontimages/fthora-period.png]]                | permsharp                       |               |                                 |                                                               |                   |                                                                                                                                                                                     |
@@ -222,7 +222,7 @@
 |          | [     | [[ka_fontimages/fthora-left-bracket.png]]          | flat1                           |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | ]     | [[ka_fontimages/fthora-right-bracket.png]]         | sharp1                          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | ^     | [[ka_fontimages/fthora-up-caret.png]]              | indicatezoR                     |               |                                 |                                                               |                   |                                                                                                                                                                                     |
-|          | -     | [[ka_fontimages/fthora-plus.png]]                  | flatR                           |               |                                 |                                                               |                   |                                                                                                                                                                                     |
+|          | +     | [[ka_fontimages/fthora-plus.png]]                  | flatR                           |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | a     | [[ka_fontimages/fthora-a.png]]                     | fthorahardchromaticpaU          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | d     | [[ka_fontimages/fthora-d.png]]                     | fthorasoftchromaticdiU          |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | e     | [[ka_fontimages/fthora-e.png]]                     | fthoradiatonicgaU               |               |                                 |                                                               |                   |                                                                                                                                                                                     |
@@ -271,7 +271,7 @@
 |          | X     | [[ka_fontimages/combo-capital-X.png]]              | olig-aposU                      |               | olig-aposU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | [     | [[ka_fontimages/combo-left-bracket.png]]           | diplD-heteD                     |               | diplD-heteD                     |                                                               |                   |                                                                                                                                                                                     |
 |          | ]     | [[ka_fontimages/combo-right-bracket.png]]          | tetrD-heteD                     |               | tetrD-heteD                     |                                                               |                   |                                                                                                                                                                                     |
-|          | _     | [[ka_fontimages/combo-plus.png]]                   | peta-syneU                      |               | peta-syneU                      |                                                               |                   |                                                                                                                                                                                     |
+|          | +     | [[ka_fontimages/combo-plus.png]]                   | peta-syneU                      |               | peta-syneU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | c     | [[ka_fontimages/combo-c.png]]                      | olig-petaU                      |               | olig-petaU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | i     | [[ka_fontimages/combo-i.png]]                      | olig-hypsUL-ken2U               |               | olig-hypsUL-ken2U               |                                                               |                   |                                                                                                                                                                                     |
 |          | s     | [[ka_fontimages/combo-s.png]]                      | klasU2L                         |               | (if olig-aposU) klasU           |                                                               |                   |                                                                                                                                                                                     |
