--- a/org/neume_names_phase1.org
+++ b/org/neume_names_phase1.org
@@ -174,7 +174,7 @@
 |          | y     | [[ka_fontimages/martyria-y.png]]                   | mhypo                           |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | z     | [[ka_fontimages/martyria-z.png]]                   | chrons4                         |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | {     | [[ka_fontimages/martyria-left-curly-bracket.png]]  | plfourth                        |               |                                 |                                                               |                   |                                                                                                                                                                                     |
-|          | ~     | [[ka_fontimages/martyria-tilde.png]]               | mprimeU                         |               |                                 |                                                               |                   |                                                                                                                                                                                     |
+|          | ~     | [[ka_fontimages/martyria-tilde.png]]               | mtonosU                         |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | π     | [[ka_fontimages/martyria-pi.png]]                  | thirdmode                       |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          | “     | [[ka_fontimages/martyria-left-double-quote.png]]   | legetos                         |               |                                 |                                                               |                   |                                                                                                                                                                                     |
 |          |       |                                                |                                 |               |                                 |                                                               |                   |                                                                                                                                                                                     |
